--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "babel-plugin-wildcard": "^2.1.3",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.2.5",
+    "moment": "^2.20.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-bootstrap-button-loader": "^1.0.11",
     "react-dom": "^16.2.0",
+    "react-input-range": "^1.2.2",
+    "react-input-slider": "^4.0.1",
+    "react-interval": "^2.0.2",
+    "react-native-background-timer": "^2.0.0",
     "react-redux": "^5.0.6",
     "react-refetch": "^1.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
+    "react-select": "^1.1.0",
     "react-timer-mixin": "^0.13.3",
+    "react-widgets": "^4.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.0",
@@ -26,6 +33,7 @@
     "redux-thunk": "^2.2.0",
     "refetch": "^0.2.4",
     "semantic-ui-css": "^2.2.12",
+    "semantic-ui-range": "^1.0.1",
     "semantic-ui-react": "^0.77.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
