--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+###> symfony/framework-bundle ###
+.env
+/public/bundles/
+/var/
+/vendor/
+.idea
+imperius
+/symfony.lock
+/.DS_STORE
+/imperius
+/.vscode
+###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
+=======
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
