--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-wildcard": "^2.1.3",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.2.5",
+    "material-ui": "^0.20.0",
     "moment": "^2.20.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
