--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "babel-plugin-wildcard": "^2.1.3",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.2.5",
-    "material-ui": "^0.20.0",
+    "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-bootstrap-button-loader": "^1.0.11",
+    "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
     "react-input-range": "^1.2.2",
     "react-input-slider": "^4.0.1",
     "react-interval": "^2.0.2",
+    "react-js-pagination": "^3.0.0",
     "react-native-background-timer": "^2.0.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.6",
@@ -29,6 +31,7 @@
     "react-semantic-redux-form": "^1.2.4",
     "react-timer-mixin": "^0.13.3",
     "react-widgets": "^4.1.1",
+    "react-with-styles": "^2.3.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.0",
