--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-wildcard": "^2.1.3",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.2.5",
+    "history": "^4.7.2",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "path": "^0.12.7",
