--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "refetch": "^0.2.4",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-range": "^1.0.1",
-    "semantic-ui-react": "^0.77.1",
+    "semantic-ui-react": "^0.77.2",
+    "semantic-ui-react-button-pagination": "^1.0.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
