--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-interval": "^2.0.2",
     "react-js-pagination": "^3.0.0",
     "react-native-background-timer": "^2.0.0",
+    "react-paginate": "^5.0.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.6",
     "react-refetch": "^1.0.4",
