--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-bootstrap-button-loader": "^1.0.11",
+    "react-confirm-alert": "^1.0.8",
+    "react-confirm-bootstrap": "^5.1.1",
     "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
     "react-input-range": "^1.2.2",
